using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class ConstValue
{
    public const float AirLowSpeed = 0.4f;
    public const float GroundCheckCoolTime = 0.2f;

    public const string IdleAnim = "IsIdle";
    public const string MoveAnim = "IsMove";
    public const string JumpStartAnim = "JumpStart";
    public const string JumpVeclocity = "VelocityY";
    public const string JumpEndAnim = "JumpEnd";
}
